Finally fixed the layout problem, settled on something

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -5,14 +5,10 @@
 /* ========================================================================== */
 .settings-col{ 
     background: rgb(255, 255, 255); 
-    overflow-y: hidden; 
+    overflow: hidden; 
     height: 100vh; /* Adjust height as needed */ 
-} 
 
-.settings-container {
-    width: 300px; 
-    height: 100vh; 
-}
+} 
 
 .fixed-top {
     position: fixed; /* Set position to fixed */
@@ -33,9 +29,6 @@
     text-decoration: none; 
 }
 .logout-btn{
-    position: absolute; 
-    bottom: 10px; 
-    left: 10%; 
     width: 100px; 
     border-radius: 20px; 
 }
@@ -45,7 +38,7 @@
 }
 .menu-list a{
     font-size: 20px; 
-    margin-left: 10%;
+    margin-left: 0%;
     text-align: left; 
     border: none;
     /* background-color: #333; */
@@ -62,8 +55,9 @@
 .content-col{
     position: sticky;
     background-color: rgb(231, 231, 231); 
-    /* overflow-y: scroll;  */
-    /* height: 100vh; Adjust height as needed  */
+    overflow-y: scroll; 
+    height: 100vh; 
+     
     z-index: 1000; 
 }
 
@@ -201,8 +195,9 @@
 
 /* ========================================================================== */
 .sidebar-col{
-    background: rgb(228, 228, 228); 
+    background: rgb(255, 255, 255); 
     height: 100vh; 
+    overflow-y: scroll; 
 }
 
 #infinite-scroll {
